# onto-to-kg-dynamic

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
onto_to_kg_dynamic/: base_ontology.py  pdf_loader.py  utils.py  visualization.py
onto_to_kg_dynamic/models/: configurations.py  entity_model.py  kg_extractor.py  relation_model.py
src/onto_to_kg_dynamic/: __init__.py  base_ontology.py
tests/: test_entity_model.py  test_pdf_loader.py
