[project]
name = "onto-to-kg-dynamic"
version = "0.1.0"
description = "Extract Knowledge Graph with LLMs from pre-defined Ontology"
readme = "README.md"
authors = [{ name = "Arda Can Aras", email = "ardaaras99@gmail.com" }]
requires-python = "==3.13.2"
dependencies = [
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.45",
    "langchain-openai>=0.3.9",
    "pydantic>=2.6.1",
    "pypdf2>=3.0.1",
    "pytest>=8.3.5",
    "unstructured[pdf]>=0.17.2",
]

[project.scripts]
onto-to-kg-dynamic = "onto_to_kg_dynamic:main"

[tool.ruff]
line-length = 200

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.4.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "pep8-naming>=0.14.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "tox>=4.24.2",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true


[tool.ruff.lint.extend-per-file-ignores]
"*" = ["B008"]
"tests/*" = ["S101"]
